test/files/neg/reassignment.scala
class A {
  x = 5
  y := 45
  y += 45
  val z = 50
  z = 51
}